@@ -2,23 +2,20 @@
 // This file is part of the "Irrlicht Engine".
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
-#include "IrrCompileConfig.h"
+#include "COGLES2MaterialRenderer.h"
 
 #ifdef _IRR_COMPILE_WITH_OGLES2_
 
-#include "COGLES2Common.h"
+#include "EVertexAttributes.h"
+#include "IGPUProgrammingServices.h"
+#include "IShaderConstantSetCallBack.h"
+#include "IVideoDriver.h"
+#include "os.h"
+
+#include "COGLES2Driver.h"
 
 #include "COGLCoreTexture.h"
 #include "COGLCoreCacheHandler.h"
-
-#include "COGLES2MaterialRenderer.h"
-#include "IGPUProgrammingServices.h"
-#include "IShaderConstantSetCallBack.h"
-#include "IMaterialRendererServices.h"
-#include "IVideoDriver.h"
-#include "os.h"
-#include "COGLES2Driver.h"
-#include "COGLES2MaterialRenderer.h"
 
 namespace irr
 {
