@@ -2,13 +2,16 @@
 // This file is part of the "Irrlicht Engine".
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
-#include "IrrCompileConfig.h"
+#include "COGLES2NormalMapRenderer.h"
 
 #ifdef _IRR_COMPILE_WITH_OGLES2_
 
-#include "COGLES2NormalMapRenderer.h"
+#include "IMaterialRendererServices.h"
+#include "IGPUProgrammingServices.h"
+#include "IShaderConstantSetCallBack.h"
 #include "IVideoDriver.h"
 #include "SLight.h"
+#include "os.h"
 
 namespace irr
 {
